<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="412sp"
    android:layout_height="600sp"
    tools:context=".volunteer.VolunteerHomeFragment" >

    <TextView
        android:id="@+id/welcomeVolText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome, (null)"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeVolText"
        app:layout_constraintVertical_bias="0.002">

        <Button
            android:id="@+id/settingsVolBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Settings"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="92dp" />

        <Button
            android:id="@+id/picVolBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Picture" />

        <Button
            android:id="@+id/logoutVolBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Logout" />

    </LinearLayout>

    <TextView
        android:id="@+id/idVolText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ID: (null)"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePictureVol"
        app:layout_constraintVertical_bias="0.307" />

    <TextView
        android:id="@+id/DNvolText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="(null)"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePictureVol" />

    <TextView
        android:id="@+id/phoneVolText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="phone: (null)"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePictureVol"
        app:layout_constraintVertical_bias="0.565" />

    <TextView
        android:id="@+id/emailVolText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="email: (null)"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePictureVol"
        app:layout_constraintVertical_bias="0.441" />

    <ImageView
        android:id="@+id/profilePictureVol"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeVolText"
        app:layout_constraintVertical_bias="0.029"
        app:srcCompat="@drawable/pfp_placeholder" />

</androidx.constraintlayout.widget.ConstraintLayout>